# sdd

./: .TYPE_HINTS_PROGRESS.md  .bandit  .editorconfig  .gitignore  .gitmessage  .pluginignore  .pydocstyle  BUGS.md  BUG_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENTS.md  ERROR_HANDLING_MIGRATION_PLAN.md  INSTALLATION_TEST_FINDINGS.md  Makefile  NEXT_SESSION_PROMPT.md  NOTES.md  PHASE_1_MIGRATION_COMPLETE.md  PHASE_2_MIGRATION_COMPLETE.md  PHASE_3A_MIGRATION_COMPLETE.md  PHASE_3B_MIGRATION_COMPLETE.md  PHASE_3C_MIGRATION_COMPLETE.md  PLUGIN_IMPLEMENTATION_PLAN.md  PLUGIN_IMPLEMENTATION_PLAN_PHASES_0-4.md  PLUGIN_IMPLEMENTATION_PLAN_PHASES_5+.md  README.md  ROADMAP.md  SECURITY.md  SPEC_FILE_INTEGRATION_NOTES.md  TEMPLATE_FILES_CHECKLIST.md  TEST_PROGRESS.md  auth.py  auth_test.py  error_handling_migration_analysis.json  profile.py  profile_test.py  pyproject.toml  requirements.txt  sdd_cli.py  setup.py  (+3 more)
.claude/: COMMANDS_README.md  COMMAND_FORMAT.md
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: codebase-auditor.md
.claude/commands/: end.md  init.md  learn-curate.md  learn-search.md  learn-show.md  learn.md  learning-capture.md  learning-search.md  session-status.md  (+13 more)
analysis-docs/: TESTING_GUIDE.md  TESTING_QUICKSTART.md  analyze_test_results.py  compare_stacks.py  test_all_templates.py  test_github_integration.py
commands/: learning-capture.md  learning-curate.md  learning-show.md  session-end.md  session-init.md  session-status.md  start.md  work-item-next.md  work-item-show.md
docs/: ARCHITECTURE.md  README.md  SECURITY.md  audit-implementation-plan.md  configuration.md  implementation-insights.md  learning-system.md  session-driven-development.md  spec-template-structure.md  troubleshooting.md  writing-specs.md
scripts/: __init__.py  analyze_error_handling_migration.py  api_contract_validator.py  briefing_generator.py  config_validator.py  dependency_graph.py  deployment_executor.py  environment_validator.py  file_ops.py  generate_stack.py  generate_tree.py  git_integration.py  init_project.py  integration_test_runner.py  learning_curator.py  logging_config.py  performance_benchmark.py  quality_gates.py  session_complete.py  session_status.py  session_validate.py  spec_parser.py  spec_validator.py  sync_to_plugin.py  work_item_manager.py
templates/: WORK_ITEM_TYPES.md  bug_spec.md  config.schema.json  deployment_spec.md  feature_spec.md  integration_test_spec.md  refactor_spec.md  security_spec.md
tests/: conftest.py  test_briefing_generator_args.py  test_config_validation.py  test_git_status_finalization.py  test_gitignore_os_patterns.py  test_learning_curator_bug_fixes.py  test_logging.py  test_sdd_setup.py  test_session_validate.py
(+533 files in other folders)
